# kassa-core-backend

./: .coveragerc  .env.example  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
accounts/: admin.py  apps.py  models.py  rbac.py  serializers.py  signals.py
accounts/migrations/: 0001_initial.py  0002_usersettings.py  0003_useraddress.py  0004_phoneverificationcode.py  0005_permission_role_rolepermission_role_permissions.py  0005_usersettings_extra_usersettings_language_and_more.py  0006_user_roles.py  0007_merge_20260311_1727.py  0007_merge_20260311_2019.py  0008_merge_20260311_2101.py
accounts/services/: phone_auth_service.py
accounts/tests/: test_models.py  test_phone_auth_service.py  test_rbac.py  test_role_permission.py  test_user_settings.py
analytics/: admin.py  apps.py  models.py  services.py
api/: apps.py  urls.py
common/: cache.py  exceptions.py  middleware.py  models.py
deploy/: entrypoint.sh
fiscal/: admin.py  apps.py  models.py  ofd_client.py  services.py  signals.py  tasks.py
integrations/: apps.py  erp.py  tasks.py  warehouse.py
kassa_core/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
orders/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py
payments/: acquiring.py  admin.py  models.py  services.py
products/: admin.py  apps.py  models.py  services.py
returns/: admin.py  apps.py  models.py  services.py
stores/: admin.py  admin_views.py  apps.py  context.py  forms.py  models.py  widgets.py
(+123 files in other folders)
